--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -145,12 +145,6 @@
       align-items: flex-start
       flex-direction: column
       width: 340px
-      &_item:nth-child(5)
-        order: 6
-        flex-basis: 50%
-      &_item:nth-child(6)
-        order: 5
-        margin-bottom: 15px
     &__dialog
       padding: 33px 60px
 @media (max-width: 768px)
@@ -424,16 +418,17 @@
         grid-row: 8
         grid-column: 1
         margin-top: 30px
-    &__form
-      &_item:nth-child(4)
-        order: 5
-      &_item:nth-child(5)
-        order: 4
-        flex-basis: 100%
-        margin-bottom: 14px
   .modal
     &__form
       width: 250px
+      &_bottom
+        &_wrapper
+          width: 100%
+          flex-direction: column-reverse
+          align-items: flex-start
+          align-content: flex-start
+    &__button
+      flex-basis: 100%
 @media (max-width: 480px)
   .container
     width: 85%
