--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -34,7 +34,7 @@
       margin-bottom: 90px
   &__form
     display: flex
-    align-items: center
+    align-items: start
     justify-content: space-between
     flex-wrap: wrap
   &__ul
