--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -57,9 +57,18 @@
     font-weight: bold
     font-size: 12px
     line-height: 15px
+    margin-top: 15px
     color: #E0E0E0
   &__form
     display: flex
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
+    &_bottom
+      &_wrapper
+        width: 100%
+        display: flex
+        align-items: center
+        align-content: center
+        justify-content: space-between
+        flex-wrap: wrap
