--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -40,25 +40,35 @@
   position: relative
   width: 350px
   height: 55px
-  border-radius: 4px
-  overflow: hidden
+  /** overflow: hidden **/
   &__input
     position: absolute
     width: 100%
     height: 100%
     border: none
+    border-radius: 4px
     padding-left: 33px
     padding-right: 75px
     font-style: normal
     font-weight: 300px
     font-size: 14px
     line-height: 18px
+    &_group
+      display: block
+      height: 75px
   &__button
     position: absolute
     min-width: 65px
     right: 0
     top: 0
     height: 100%
+    border-radius: 0 4px 4px 0
     border: none
     background-color: $primary
     color: $light
+    cursor: pointer
+#email
+  &-error
+    position: relative
+    z-index: 200
+    /** top: 55px **/
